# hhgtg

./: .gitignore  INDEX  README  meson.build
C/: atoi.c  binary_search.c  callback.c  character_counting.c  compile  endianness.c  fahrenheit_to_celcius.c  file_copy.c  file_io.c  hello_world.c  itoa.c  line_counting.c  meson.build  power_function.c  print_longest_char_array.c  print_longest_extern.c  reverse_string.c  shellsort.c  switch.c  trim_break.c  word_counting.c
C++/: cheatsheet  class_and_inheritance.c  class_and_inheritance.cpp  compile  hashmaps.cpp  meson.build  virtual_functions.c
C/GLib/: meson.build  threads
Python/: class_and_inheritance.py  list_tuple_dictionary.py  multiple_inheritance.py  struct.py
algorithms/: meson.build
algorithms/backtracking/: meson.build
algorithms/dynamic_programming/: compile  lakes.c  meson.build  number_of_paths.c
algorithms/math/: compile  dec_to_binary.c  factorial.c  fibonacci.c  lowest_common_terms.c  meson.build  palindromes.c  pascal_triangle.c  prime_factors.c  prime_numbers.c  recursive_exponentiation.c  running_upstairs.c  sample_input_bresenham  trailing_zeros_factorial.c
algorithms/other/: buy_sell_stock.c  compile  date_from_epoch.c  fisher_yates_shuffle.c  lakes.c  largest_contiguous.c  meson.build  months_starting_on_weekday.c  neighbour_areas.c  sample_input_neighbour_areas  shuffle_cards.c
algorithms/recursion/: binary_search.c  combinations.c  compile  hanoi_towers.c  max_by_divide_and_conquer.c  max_pyramid_run.c  meson.build  permutations.c  recursion.c  sample_easiest_platforms_path  telephone_words.c
algorithms/search/: array_based_symbol_table.c  binary.c  closest_numbers.c  compile  key_indexed_search.c  meson.build  missing_numbers.c  missing_numbers_input.txt  pairs.c  pairs_input.txt  two_dimensions.c
algorithms/sorting/: buying_toys.c  compile  countingsort.c  find_kth_element.c  heapsort.c  insertionsort.c  key_indexed_counting.c  mergesort.c  meson.build  minimize_sorting.c  quicksort.c  selectionsort.c  sleep_sort.sh  slice_array.c  stream_and_rank.c
bit_manipulation/: bit_manipulation.c  bit_palindromes.c  compile  contain_m_n.c  count_ones.c  meson.build  palindromes.c  sign.c
data_structures/: meson.build
data_structures/arrays/: bit_vector.c  business_tasks.c  compile  dynamic_array.c  meson.build  number_spiral.c  rotate_90_degrees.c  rotate_array.c  sample_input_variable_connect_four  two_sum_sorted.c  zero_out.c
data_structures/dynamic_array/: compile
data_structures/graph/: adjacency_list.c  adjacency_list_connected_nodes.c  adjacency_list_dfs.c  adjacency_list_search.c  adjacency_matrix.c  bucket_fill.c  compile  lattice_paths.c  meson.build  min_number_steps.c  shortest_path_steps.c
data_structures/hash_table/: compile  hash_table_open_addressing.c  hash_table_separate_chaining.c  meson.build
data_structures/linked_lists/: adding.c  compile  cyclical.c  find_kth_element.c  intersecting_lists.c  linked_list.c  merge_sorted.c  meson.build  partition.c  remove_duplicates.c  remove_node.c  reverse_double_linked.c
data_structures/queues/: array_implemented_queue.c  binomial_heap.c  compile  meson.build  priority_queue.c  queue.c  random_queue.c
data_structures/recursion/: compile
data_structures/stack_n_queues/: compile  queue.c  several_stacks.c  split_array_stack.c
data_structures/stacks/: compile  infix_postfix_calculations.c  meson.build  several_stacks.c  sorting_with_two_stacks.c  split_array_stack.c  stack.c  stack_min.c
data_structures/strings/: all_unique_characters.c  anagram.c  balanced_parenthesis.c  compile  compression_repeated_characters.c  contained.c  first_non_repeating.c  meson.build  numbers_to_english.c  permutation.c  remove_characters.c  replace_spaces.c  reverse_string.c  reverse_words.c
data_structures/trees/: balanced_from_sorted.c  binary_tree.c  binary_tree_measure.c  binary_tree_measure_and_sum.c  binary_tree_measure_height.c  breadth_first_search.c  compare_trees.c  compile  depth_first_search.c  display_paths.c  fenwick_bit.c  join_trees.c  lowest_common_ancestor.c  meson.build  mirrors.c  preorder_traversal_nonrecursive.c  root_insertion.c  trie.c
dynamic_array/: dynamic_array.c
files/: list_characters.c  meson.build  write_fixed_length_fields.c
hash_table/: compile  hash_table_open_addressing.c  hash_table_separate_chaining.c
threads/: array_powers_with_threads.c  compile  create_threads.c  glib_threads.c  meson.build
