subdir('GLib')

executable('atoi', 'atoi.c')
executable('C_binary_search', 'binary_search.c')
executable('character_counting', 'character_counting.c')
executable('endianness', 'endianness.c')
executable('fahrenheit_to_celcius', 'fahrenheit_to_celcius.c')
executable('file_copy', 'file_copy.c')
executable('file_io', 'file_io.c')
executable('hello_world', 'hello_world.c')
executable('itoa', 'itoa.c')
executable('line_counting', 'line_counting.c')
executable('power_function', 'power_function.c')
executable('print_longest_char_array', 'print_longest_char_array.c')
executable('print_longest_extern', 'print_longest_extern.c')
executable('reverse_string', 'reverse_string.c')
executable('shellsort', 'shellsort.c')
executable('switch', 'switch.c')
executable('trim_break', 'trim_break.c')
executable('word_counting', 'word_counting.c')
executable('callback', 'callback.c')
executable('page_size', 'page_size.c')
executable('int_limits', 'int_limits.c')
executable('inline', 'inline.c')
