cc = meson.get_compiler('c')
m_dep = cc.find_library('m', required : false)

executable('coin_flipping', 'coin_flipping.c')
executable('dec_to_binary', 'dec_to_binary.c')
executable('exponentiation', 'exponentiation.c')
executable('factorial', 'factorial.c')
executable('fibonacci', 'fibonacci.c')
executable('lowest_common_terms', 'lowest_common_terms.c')
executable('palindromes', 'palindromes.c', dependencies : m_dep)
executable('prime_factors', 'prime_factors.c', dependencies : m_dep)
executable('prime_numbers', 'prime_numbers.c', dependencies : m_dep)
executable('reverse_number', 'reverse_number.c')
executable('running_upstairs', 'running_upstairs.c')
executable('trailing_zeros_factorial', 'trailing_zeros_factorial.c')
executable('powers_of_2', 'powers_of_2.c')
executable('bresenham', 'bresenham.c')
executable('pascal_triangle', 'pascal_triangle.c')
