executable('array_based_symbol_table', 'array_based_symbol_table.c')
executable('binary', 'binary.c')
executable('closest_numbers', 'closest_numbers.c')
executable('key_indexed_search', 'key_indexed_search.c')
executable('median', 'median.c')
executable('missing_numbers', 'missing_numbers.c')
executable('pairs', 'pairs.c')
executable('two_dimensions', 'two_dimensions.c')
