executable('bubblesort', 'bubblesort.c')
executable('buying_toys', 'buying_toys.c')
executable('countingsort', 'countingsort.c')
executable('find_kth_element', 'find_kth_element.c')
executable('heapsort', 'heapsort.c')
executable('insertionsort', 'insertionsort.c')
executable('key_indexed_counting', 'key_indexed_counting.c')
executable('mergesort', 'mergesort.c')
executable('minimize_sorting', 'minimize_sorting.c')
executable('quicksort', 'quicksort.c')
executable('selectionsort', 'selectionsort.c')
executable('slice_array', 'slice_array.c')
executable('stream_and_rank', 'stream_and_rank.c')
