executable('adding', 'adding.c')
executable('cyclical', 'cyclical.c')
executable('ll_find_kth_element', 'll_find_kth_element.c')
executable('linked_list', 'linked_list.c')
executable('merge_sorted', 'merge_sorted.c')
executable('multiplying', 'multiplying.c')
executable('partition', 'partition.c')
executable('remove_duplicates', 'remove_duplicates.c')
executable('remove_node', 'remove_node.c')
executable('reverse_double_linked', 'reverse_double_linked.c')
executable('intersecting_lists', 'intersecting_lists.c')
executable('palindrome', 'palindrome.c')
