executable('all_unique_characters', 'all_unique_characters.c')
executable('anagram', 'anagram.c')
executable('balanced_parenthesis', 'balanced_parenthesis.c')
executable('compression_repeated_characters', 'compression_repeated_characters.c')
executable('contained', 'contained.c')
executable('elementary_operations', 'elementary_operations.c')
executable('first_non_repeating', 'first_non_repeating.c')
executable('numbers_to_english', 'numbers_to_english.c')
executable('palindromes', 'palindromes.c')
executable('remove_characters', 'remove_characters.c')
executable('remove_duplicates', 'remove_duplicates.c')
executable('replace_spaces', 'replace_spaces.c')
executable('reverse_string', 'reverse_string.c')
executable('reverse_words', 'reverse_words.c')
executable('sorting_array_strings', 'sorting_array_strings.c')