executable('b_tree', 'b_tree.c')
executable('balanced_from_sorted', 'balanced_from_sorted.c')
executable('binary_tree', 'binary_tree.c')
executable('binary_tree_measure_and_sum', 'binary_tree_measure_and_sum.c')
executable('breadth_first_search', 'breadth_first_search.c')
executable('compare_trees', 'compare_trees.c')
executable('depth_first_search', 'depth_first_search.c')
executable('display_paths', 'display_paths.c')
executable('fenwick_bit', 'fenwick_bit.c')
executable('join_trees', 'join_trees.c')
executable('lowest_common_ancestor', 'lowest_common_ancestor.c')
executable('mirrors', 'mirrors.c')
executable('preorder_traversal_nonrecursive', 'preorder_traversal_nonrecursive.c')
executable('root_insertion', 'root_insertion.c')
executable('trie', 'trie.c')